force-app/main/default/objects/cgcloud__Calculation_Status__c/cgcloud__Calculation_Status__c.object-meta.xml
<CustomObject>
    <description>This object holds the attributes for the triggered Calculation Status</description>
    <label>Calculation Status</label>
    <nameField>
        <displayFormat>TPMCS-{000000}</displayFormat>
        <label>Calculation Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculation Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>