force-app/main/default/objects/cgcloud__Calculation_Status__c/fields/cgcloud__Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Account Plan that is calculated.</description>
    <label>Customer Business Plan</label>
    <referenceTo>cgcloud__Account_Plan__c</referenceTo>
    <relationshipLabel>AccountPlans</relationshipLabel>
    <relationshipName>AccountPlans</relationshipName>
    <type>Lookup</type>
</CustomField>