force-app/main/default/objects/cgcloud__Calculation_Status__c/fields/cgcloud__Calculation_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Id__c</fullName>
    <description>Unique Identifier for a calculation.</description>
    <externalId>true</externalId>
    <label>Calculation Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>