force-app/main/default/objects/cgcloud__Calculation_Status__c/fields/cgcloud__Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Completion_Time__c</fullName>
    <description>Time when the calculation finished signal arrived on platform.</description>
    <label>Calculation Completion Time</label>
    <type>DateTime</type>
</CustomField>