force-app/main/default/objects/cgcloud__Calculation_Status__c/fields/cgcloud__End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Time__c</fullName>
    <description>Time when the calculation was finished offcore.</description>
    <label>Calculation End Time</label>
    <type>DateTime</type>
</CustomField>