force-app/main/default/objects/cgcloud__Calculation_Status__c/fields/cgcloud__Plan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Plan__c</fullName>
    <defaultValue>&apos;{}&apos;</defaultValue>
    <label>Calculation Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>