force-app/main/default/objects/cgcloud__Calculation_Status__c/fields/cgcloud__Register_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Register_Time__c</fullName>
    <description>Time when the calculation was scheduled.</description>
    <label>Calculation Register Time</label>
    <type>DateTime</type>
</CustomField>