force-app/main/default/objects/cgcloud__Calculation_Status__c/fields/cgcloud__Result__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Result__c</fullName>
    <defaultValue>&apos;{}&apos;</defaultValue>
    <label>Calculation Result Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>