force-app/main/default/objects/cgcloud__Calculation_Status__c/fields/cgcloud__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Time__c</fullName>
    <description>Time when the offcore processing services started the calculation.</description>
    <label>Calculation Start Time</label>
    <type>DateTime</type>
</CustomField>