force-app/main/default/objects/cgcloud__Calculation_Status__c/recordTypes/cgcloud__AccountPlanCalculation.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__AccountPlanCalculation</fullName>
    <active>true</active>
    <label>AccountPlanCalculation</label>
</RecordType>