force-app/main/default/objects/cgcloud__Calculation_Status__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Calculation_Id__c</columns>
    <columns>cgcloud__Register_Time__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>cgcloud__Account_Plan__c</columns>
    <columns>cgcloud__Status__c</columns>
    <columns>cgcloud__Start_Time__c</columns>
    <columns>cgcloud__End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>